tests/syntax/bad/testfile-expr20-1.scala
class A {
    def m() { var i = j.1 = 2  }
}
object Main { def main(args: Array[String]) { } }
